# saintquant-crypto-trading-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
crypto_trading_cli/: __init__.py  bot_manager.py  config.py  crypto.py  db.py  exchange.py  ft_api_client.py  ft_process.py  main.py  strategy.py  validators.py
crypto_trading_cli/strategies/: EMAStrategy.py  GridStrategy.py  RSIStrategy.py  __init__.py
crypto_trading_cli/ui/: __init__.py  menus.py  prompts.py  tables.py
tests/: __init__.py  test_bot_manager.py  test_crypto.py  test_db.py  test_ft_api_client.py  test_ft_process.py  test_strategy.py  test_tables.py  test_validators.py
