[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saintquant-crypto-trading-cli"
version = "0.1.0"
description = "Standalone CLI for managing local Freqtrade crypto trading bots"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["crypto", "trading", "freqtrade", "bot", "cli", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "click>=8.1",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[project.scripts]
saintbot-cli = "crypto_trading_cli.main:cli"

[project.urls]
Homepage = "https://github.com/your-org/crypto-trading-cli"
Issues = "https://github.com/your-org/crypto-trading-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["crypto_trading_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"crypto_trading_cli/strategies" = "crypto_trading_cli/strategies"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
